# tp-ciencia-de-datos-2026

./: .gitignore  README.md  pyproject.toml  top_5_cold_start.json
app/: initialize_artifacts.py  main.py  recommender.py
app/model_artifacts/: cold_start_ranking.json  user_history.json
notebooks/: EDA.ipynb
